--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Something</title>
+    <title>Creations made by MOOD</title>
 </head>
 
 <body style="background: url('3.jpg');background-repeat: no-repeat; background-attachment: fixed;
