--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ background-size: 100% 100%;">
         <img align="center" src="Ally.png" alt="HTML5 Icon" style="width:110px;height:100px;" >&nbsp;&nbsp;&nbsp;
          <font style="font-family:Verdana;color:white;" face = "LATO" size="6" >Discord Bot: ALLY</font> 
          <font style="font-family:Verdana;color:rgb(230, 0, 0);" face = "LATO" size="4" >(not hosted yet)</font> &nbsp;
-        <a href="https://sj006.github.io/RPS/">
+        <a href="https://discord.com/api/oauth2/authorize?client_id=1068370680657231873&permissions=8&scope=bot">
         <button style="border: none;height:50px;width:100px;background: rgb(70, 80, 228);color:white;border-radius: 8px" class="btn btn-primary btn-lg" size="6">
             <font style="font-family:Verdana;color:white;" face = "LATO" size="5" >Invite</font>
         </button>
