--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ background-size: 100% 100%;">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          <font style="font-family:Verdana;color:white;" face = "LATO" size="10" >⇒</font> &nbsp;
 
-        <img align="center" src="Imported piskel (4).gif" alt="HTML5 Icon" style="width:100px;height:100px;" >&nbsp;&nbsp;&nbsp;
+        <img align="center" src="rrp2.png" alt="HTML5 Icon" style="width:100px;height:100px;" >&nbsp;&nbsp;&nbsp;
          <font style="font-family:Verdana;color:white;" face = "LATO" size="5" >Rock Paper Scissor Game</font> &nbsp;
         <a href="https://sj006.github.io/RPS/">
         <button style="border: none;height:50px;width:100px;background: rgb(76, 211, 23);color:white;border-radius: 8px" class="btn btn-primary btn-lg" size="6">
